crates/ars-components/src/date_time/date_picker/snapshots/ars_components__date_time__date_picker__tests__label.snap
---
source: crates/ars-components/src/date_time/date_picker/tests.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-picker",
            ),
        ),
        (
            Id,
            String(
                "date-picker-label",
            ),
        ),
        (
            For,
            String(
                "date-picker-input",
            ),
        ),
    ],
    styles: [],
}
