crates/ars-components/src/date_time/date_picker/snapshots/ars_components__date_time__date_picker__tests__root_readonly.snap
---
source: crates/ars-components/src/date_time/date_picker/tests.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-readonly",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-picker",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
        (
            Id,
            String(
                "date-picker",
            ),
        ),
    ],
    styles: [],
}
